<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pagecolor"
    tools:context=".view.welcome.WelcomeActivity">

    <ImageView
        android:id="@+id/logo_remove"
        android:layout_width="173dp"
        android:layout_height="170dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/politik_ped"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_word"
        android:layout_width="329dp"
        android:layout_height="110dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="65dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/welcome_word"
        android:textAppearance="@style/welcome_word"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/politik_ped" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="208dp"
        android:layout_height="58dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="115dp"
        android:backgroundTint="@color/buttoncolor"
        android:text="@string/login"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_word" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="207dp"
        android:layout_height="58dp"
        android:layout_marginStart="112dp"
        android:layout_marginEnd="115dp"
        android:backgroundTint="@color/buttoncolor"
        android:text="@string/signup"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.434"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:layout_constraintVertical_bias="0.067" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/politik_ped"
        android:layout_width="349dp"
        android:layout_height="81dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="155dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="155dp"
        android:background="@drawable/politik_pedia"
        app:layout_constraintBottom_toTopOf="@+id/welcome_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mobile_info"
        android:layout_width="324dp"
        android:layout_height="60dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="92dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/mobile_info"
        android:textAppearance="@style/mobile_info"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"
        app:layout_constraintVertical_bias="0.771" />

</androidx.constraintlayout.widget.ConstraintLayout>